external-crates/move/crates/move-cli/tests/build_tests/public_package_different_addresses/args.exp
Command `build -v`:
BUILDING Defn
error[E04001]: restricted visibility
  ┌─ ./sources/B.move:3:31
  │
3 │     public fun usage(): u64 { defn::definition() }
  │                               ^^^^^^^^^^^^^^^^^^ Invalid call to 'public(package)' visible function 'A::defn::definition'
  │
  ┌─ ./sources/A.move:2:5
  │
2 │     public(package) fun definition(): u64 { 0 }
  │     --------------- A 'public(package)' function can only be called from the same address and package as module 'A::defn' in package 'Defn'. This call is from address 'B' in package 'Defn'

